--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/ui": "^2.18.7"
   }
 }
