--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/ui": "^2.18.7"
+    "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/device": "^3.2.4"
   }
 }
