--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "joi": "^17.13.3",
+    "mongodb": "^6.10.0",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
