--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
+    "cloudinary": "^2.5.1",
     "joi": "^17.13.3",
     "mongodb": "^6.10.0",
     "nuxt": "^3.13.2",
