--- a/.github/workflows/nuxtjs-main.yml
+++ b/.github/workflows/nuxtjs-main.yml
@@ -27,6 +27,14 @@ jobs:
     # Step 4: Install dependencies and build the Nuxt app
     - name: Install dependencies
       run: npm ci
+     # Step 5: Create .env
+    - name: Generate .env file
+      run: |
+        echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+        echo "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" >> .env
+        echo "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" >> .env
+        echo "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" >> .env
 
     - name: Build Nuxt app
       run: npm run build
