--- a/.github/workflows/nuxtjs-main.yml
+++ b/.github/workflows/nuxtjs-main.yml
@@ -44,4 +44,4 @@ jobs:
       run: docker build -t nuxt3-app .
 
     - name: Run Docker container
-      run: docker run -d --name nuxt3-app -p 3000:3000 nuxt3-app
+      run: docker run -d --name nuxt3-app --env-file .env -p 3000:3000 nuxt3-app
