--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0",
+    "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.5.1",
     "joi": "^17.13.3",
     "mongodb": "^6.10.0",
