--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.5.1",
     "joi": "^17.13.3",
+    "lottie-web": "^5.12.2",
     "mongodb": "^6.10.0",
     "nuxt": "^3.13.2",
     "qr-code-styling": "^1.8.4",
