--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@nuxt/ui": "^2.18.7",
     "@nuxtjs/device": "^3.2.4",
-    "@nuxtjs/i18n": "^9.1.1"
+    "@nuxtjs/i18n": "^9.1.1",
+    "@sidebase/nuxt-auth": "^0.10.0"
   }
 }
