--- a/.github/workflows/nuxtjs-main.yml
+++ b/.github/workflows/nuxtjs-main.yml
@@ -14,11 +14,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # Step 3: Remove old container
+    # Step 3: Remove old container & stop other containers
     - name: Stop and remove old container
       run: |
         docker stop nuxt3-app || true && docker rm nuxt3-app || true
         docker stop 219de12dca91 || true
+        docker stop e1d6ba022399 || true
       
     # Step 3: Set up Node.js
     - name: Set up Node.js
@@ -50,3 +51,4 @@ jobs:
       run: |
         docker run -d --name nuxt3-app --env-file .env -p 3000:3000 nuxt3-app
         docker start 219de12dca91 || true
+        docker start e1d6ba022399 || true
