--- a/.github/workflows/nuxtjs-main.yml
+++ b/.github/workflows/nuxtjs-main.yml
@@ -20,6 +20,7 @@ jobs:
         docker stop nuxt3-app || true && docker rm nuxt3-app || true
         docker stop 219de12dca91 || true
         docker stop e1d6ba022399 || true
+        docker stop a6c626bae55e || true
       
     # Step 3: Set up Node.js
     - name: Set up Node.js
@@ -50,5 +51,6 @@ jobs:
     - name: Run Docker container
       run: |
         docker run -d --name nuxt3-app --env-file .env -p 3000:3000 nuxt3-app
+        docker start a6c626bae55e || true
         docker start 219de12dca91 || true
         docker start e1d6ba022399 || true
