--- a/.github/workflows/nuxtjs-main.yml
+++ b/.github/workflows/nuxtjs-main.yml
@@ -3,54 +3,48 @@ name: Deploy Nuxt 3 App
 on:
   push:
     branches:
-      - main  # Trigger deployment when changes are pushed to main
+      - main
 
 jobs:
   deploy:
-    runs-on: self-hosted 
+    runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the repository
     - name: Checkout repository
       uses: actions/checkout@v3
-
-    # Step 3: Remove old container & stop other containers
-    - name: Stop and remove old container
-      run: |
-        docker stop nuxt3-app || true && docker rm nuxt3-app || true
-        docker stop backend-contactless || true
-      
-    # Step 3: Set up Node.js
+    
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 20
-
-    # Step 4: Install dependencies and build the Nuxt app
+        node-version: 22
     - name: Install dependencies
       run: npm ci
-     # Step 5: Create .env
-    - name: Generate .env file
-      run: |
-        echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
-        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-        echo "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" >> .env
-        echo "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" >> .env
-        echo "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" >> .env
-        echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-        echo "AUTH_ORIGIN=${{ secrets.AUTH_ORIGIN }}" >> .env
-        echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
-        echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-        echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" >> .env
-
+  
     - name: Build Nuxt app
       run: npm run build
 
-    # Step 5: Build and run the Docker container
-    - name: Build Docker image
-      run: docker build -t nuxt3-app .
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Run Docker container
+    - name: Build Docker image
       run: |
-        docker run -d --name nuxt3-app --env-file .env -p 3000:3000 nuxt3-app
-        docker start backend-contactless || true
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/nuxt3-app:latest .
+
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/nuxt3-app:latest
+
+    - name: Deploy via SSH
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        script: |
+          docker stop nuxt3-app || true
+          docker rm nuxt3-app || true
+          docker pull ${{ secrets.DOCKER_USERNAME }}/nuxt3-app:latest
+          docker run -d --name nuxt3-app --env-file /home/thy/appConfig/.env -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/nuxt3-app:latest
