--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "^9.1.1",
+    "@pinia/nuxt": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.10.0"
   }
 }
