--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/i18n": "^9.1.1",
     "@pinia/nuxt": "^0.9.0",
-    "@sidebase/nuxt-auth": "^0.10.0"
+    "@sidebase/nuxt-auth": "^0.10.0",
+    "pinia-plugin-persistedstate": "^4.2.0"
   }
 }
