--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@pinia/nuxt": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.10.0",
+    "nuxt-gtag": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0"
   }
 }
