--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.5.1",
+    "crypto-js": "^4.2.0",
     "joi": "^17.13.3",
     "lottie-web": "^5.12.2",
     "mongodb": "^6.10.0",
@@ -27,6 +28,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@pinia/nuxt": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.10.0",
+    "@types/crypto-js": "^4.2.2",
     "nuxt-gtag": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0"
   }
